--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,8 @@
     <string name="start_detoxifier">Start</string>
     <string name="stop_detoxifier">Stop</string>
     <string name="dialog_remove">"Do you want to remove the app from the list?"</string>
-    <string name="dialog_positive">"Do you want to remove the app from the list?"</string>
-    <string name="dialog_negative">"Do you want to remove the app from the list?"</string>
+    <string name="dialog_positive">"Yes"</string>
+    <string name="dialog_negative">"No"</string>
 
     <string name="please_wait">Please wait</string>
     <string name="loading">Loading</string>
