--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,9 @@
     <string name="dialog_remove">"Do you want to remove the app from the list?"</string>
     <string name="dialog_positive">"Yes"</string>
     <string name="dialog_negative">"No"</string>
+    <string name="app_blacklisted">"This app is blacklisted"</string>
+    <string name="detoxifier_started">Detoxifier is enabled</string>
+    <string name="detoxifier_stopped">Detoxifier is disabled</string>
 
     <string name="please_wait">Please wait</string>
     <string name="loading">Loading</string>
